force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Population_Summary__c.field-meta.xml
<CustomField>
    <fullName>fpro__Population_Summary__c</fullName>
    <description>Displays sample values as populated on some recent records</description>
    <inlineHelpText>Displays sample values as populated on some recent records</inlineHelpText>
    <label>(Not In Use) Population Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>