force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__References_Permission_Sets_Visibility__c.field-meta.xml
<CustomField>
    <fullName>fpro__References_Permission_Sets_Visibility__c</fullName>
    <description>List of Permission Sets this field is visible to.</description>
    <inlineHelpText>List of Permission Sets this field is visible to.</inlineHelpText>
    <label>References (Permission Sets Visibility)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>