force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Run_Status__c.field-meta.xml
<CustomField>
    <fullName>fpro__Run_Status__c</fullName>
    <businessOwnerUser>chitan@clio.me.devserhii</businessOwnerUser>
    <complianceGroup>PII;HIPAA;GDPR</complianceGroup>
    <description>Keep track of analysis results (used in VF page to check the status of results viewed by user)</description>
    <inlineHelpText>Keep track of analysis results (used in VF page to check the status of results viewed by user)</inlineHelpText>
    <label>Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run Started</fullName>
            </value>
            <value>
                <fullName>Results Viewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>