force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Sample_Records_Values__c.field-meta.xml
<CustomField>
    <fullName>fpro__Sample_Records_Values__c</fullName>
    <description>Displays sample values as populated on some recent records. Calculates when you &apos;Run Service&apos; on the object.</description>
    <inlineHelpText>Displays sample values as populated on some recent records. Calculates when you &apos;Run Service&apos; on the object.</inlineHelpText>
    <label>Sample Records/Values</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>